-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.6, 5.8.0 RC, 5.8.0
-
None
-
-
f242b91189e3bd0cc96dd1a2695eef0521099aea a45566eec711941abe975a38917c024644e82bd7
Apple has added a new field in Xcode 8 under 'Signing' called 'Team'. This field is required (in addition to signing certificate) when building and signing an app for device. Since the project generator doesn't set it, it will not be possible to build for device (e.g from QtCreator) without setting it manually through Xcode.
- relates to
-
QTCREATORBUG-16936 Provide option to select development team used for signing
-
- Closed
-
| For Gerrit Dashboard: QTBUG-55915 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 171012,3 | Fix code signing for qmake-generated Xcode projects in Xcode 8 | 5.6.2 | qt/qtbase | Status: MERGED | +2 | 0 |
| 171744,2 | Fix code signing for qmake-generated Xcode projects in Xcode 8 (again) | 5.6.2 | qt/qtbase | Status: MERGED | +2 | 0 |